<resources>
    <string name="app_name">TemiGO Restaurant DEMO</string>
    <string name="tray_1">Tray 1</string>
    <string name="tray_2">Tray 2</string>
    <string name="tray_3">Tray 3</string>
    <string name="table_1">Table 1</string>
    <string name="table_2">Table 2</string>
    <string name="table_3">Table 3</string>
    <string name="table_4">Table 4</string>
    <string name="table_5">Table 5</string>
    <string name="table_6">Table 6</string>
    <string name="table_7">Table 7</string>
    <string name="table_8">Table 8</string>
    <string name="table_9">Table 9</string>
    <string name="table_10">Table 10</string>
    <string name="app_banner">TemiGO Delivery service DEMO</string>
    <string name="order_1">Order 1</string>
    <string name="order_2">Order 2</string>
    <string name="order_3">Order 3</string>
    <string name="start_delivery">Start delivery</string>
    <string name="go_to_Home_Base">Go to Home Base</string>
    <string name="go_to_loading_area">Go to loading area</string>
    <string name="clear">Clear order list</string>
    <string name="order_1_sum">Order 1:</string>
    <string name="order_2_sum">Order 2:</string>
    <string name="order_3_sum">Order 3:</string>
    <string name="kitchen">kitchen</string>
    <string name="planned_route">\"Planned route: \"</string>
    <string name="exit_button">Exit button</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit_app_title">Exit application</string>
    <string name="exit_app_message">Are you sure you want to exit TemiGO Delivery service DEMO application?</string>
    <string name="clear_order_1"> Clear order 1 </string>
    <string name="clear_order_2"> Clear order 2 </string>
    <string name="clear_order_3"> Clear order 3 </string>
    <string name="order_history">Order History:</string>
    <string name="clear_order_history">Clear order History</string>
</resources>